--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </head>
 
-<body>
+<body onload="init()">
     <nav class="navbar bg-body-tertiary">
         <div class="container-fluid">
             <span class="navbar-text">
@@ -30,38 +30,39 @@
         <div class="card quiz-card">
             <img src="./img/quiz.jpg" class="card-img-top">
             <div class="card-body">
-                <h5 class="card-title">Frage</h5>
+                <h5 class="card-title" id="questionstext">Frage</h5>
 
-                <div class="card mb-2">
-                    <div class="card-body">
+                <div class="card quiz-answer mb-2">
+                    <div class="card-body" onclick="answer('answer_1')" id="answer_1">
                         Antwort
                     </div>
                 </div>
 
-                <div class="card mb-2">
-                    <div class="card-body">
-                        Antwort
-                    </div>
-                </div>
-
-
-                <div class="card mb-2">
-                    <div class="card-body">
+                <div class="card quiz-answer mb-2">
+                    <div class="card-body" onclick="answer('answer_2')" id="answer_2">
                         Antwort
                     </div>
                 </div>
 
 
-                <div class="card mb-2">
-                    <div class="card-body">
+                <div class="card quiz-answer mb-2">
+                    <div class="card-body" onclick="answer('answer_3')" id="answer_3">
                         Antwort
                     </div>
                 </div>
+
+
+                <!-- <div class="card quiz-answer mb-2">
+                    <div class="card-body" onclick="answer('answer_4')" id="answer_4">
+                        Antwort
+                    </div>
+                </div> -->
 
                 <div class="quistion-footer">
-                    <span> <b>1</b> von <b>5</b> Fragen</span>
+                    <span> <b id="question-number">1</b> von <b id="all-question">5</b> Fragen</span>
 
-                    <button class="btn btn-primary">nächste Frage</button>
+                    <button onclick="nextQuestion()" class="btn btn-primary" id="next-button" disabled>nächste
+                        Frage</button>
 
                 </div>
 
