--- a/index.html
+++ b/index.html
@@ -28,20 +28,23 @@
 
     <div class="container">
         <div class="card quiz-card">
-            <img src="./img/quiz.jpg" class="card-img-top">
-
+            <img src="./img/quiz.jpg" id="header-image" class="card-img-top">
+            <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25"
+                aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" id="progress-bar" style="width: 25%">25%</div>
+            </div>
             <div class="quizbody" id="endscreen" style="display: none;">
 
                 <div class="tex-center "> Quiz beendet</div>
-                <div class="width-100 "> <img src="./img/cup.png" alt=""> </div>
 
                 <div class="tex-center ">
                     du hast <b id="right-of-question"></b> Fragen richtig von <b id="question-beantwortet"> von XXX
                     </b>
                     beantwortet
                 </div>
-
-
+                <div class="button-row">
+                    <button onclick="restartGame()" class="btn btn-primary">Erneut spielen</button>
+                </div>
             </div>
 
 
